[FIX] overflow-x

--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -257,3 +257,8 @@ footer {
         height: 40px;
     }
 }
+
+
+.collapsible-body {
+    overflow-x: scroll;
+}
